# manaslu-qgis

./: .gitignore  CONTRIB.md  LICENSE  README.md  pyproject.toml  ro-crate-metadata.json
data/inaturalist/: manaslu_species_observations.csv  manaslu_species_observations.metadata.txt  nepal_higher_taxa.csv  nepal_higher_taxa_gnverifier.csv  nepal_higher_taxa_names.txt  nepal_higher_taxa_resolved.csv  nepal_higher_taxa_ro-crate-metadata.json  nepal_species_observations.csv  nepal_species_observations.metadata.txt  nepal_species_observations_gnverifier.csv  nepal_species_observations_names.txt
data/taxa_list/: input_taxa_list.csv  input_taxa_list_gnverifier.csv  input_taxa_list_names.txt
qgis/manaslu/: collector_list.csv  collector_list.gpkg  manaslu.qgs  manaslu.qgs~  observation_subject.gpkg  observations.gpkg  species_list.csv  species_list.gpkg
qgis/manaslu/.qfieldsync/backup/: collector_list.gpkg  collector_list.gpkg-shm  collector_list.gpkg-wal  manaslu.qgs  observation_subject.gpkg  observations.gpkg
qgis/manaslu/.qfieldsync/download/: collector_list.gpkg  observations.gpkg
qgis/manaslu/.qfieldsync/upload/: collector_list.gpkg  observation_subject.gpkg  observations.gpkg  species_list.gpkg
qgis/manaslu/optimized_maps/: Manaslu-EMI.gpkg  Manaslu-EMI.kml
scripts/: __init__.py  build_higher_taxa_input.py  combine_species_and_higher_taxa.py  fetch_inaturalist_species.py  prune_mbtiles_to_polygon.py  resolve_taxa.py
tests/: test_build_higher_taxa_input.py  test_combine_species_and_higher_taxa.py  test_fetch_inaturalist_species.py
(+1 files in other folders)
