[project]
name = "manaslu-qgis"
version = "0.1.0"
description = "QGIS/QField support scripts for the EMI Manaslu mission"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pycountry>=24.6.1",
    "pyinaturalist>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
